Bootstrap css added for login and register forms

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,9 +5,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: linear-gradient(-190deg, rgb(213, 241, 252),rgb(247, 215, 157));
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.form-signin {
+  max-width: 530px;
+  padding: 15px;
 }
